# binance-connector

./: .env.example  Cargo.toml  README.md
benches/: fetch_benchmark.rs
examples/: advanced_stream.rs  fetch_example.rs  stream_example.rs
src/: client.rs  config.rs  endpoints.rs  error.rs  lib.rs  models.rs  rate_limiter.rs  websocket.rs
tests/: integration_tests.rs  mock_server.rs  websocket_tests.rs
